[tool.poetry]
name = "arb-pools"
version = "0.1.0"
description = ""
authors = ["Martin Hloska <martin.hloska@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
substrate-interface = "^1.2.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
